[gd_scene load_steps=7 format=3 uid="uid://buw3g0ai17cvy"]

[ext_resource type="Script" path="res://scripts/playerScript.gd" id="1_sfk0b"]
[ext_resource type="PackedScene" uid="uid://c5jqk12llv8mh" path="res://assets/character/character1/Character_Male_1.tscn" id="2_fns4k"]
[ext_resource type="Script" path="res://scripts/camera_spring_arm.gd" id="3_uybvm"]
[ext_resource type="Script" path="res://scripts/camera_follow.gd" id="4_noa0o"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_140pd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_eka8w"]
radius = 0.3

[node name="Player1" type="CharacterBody3D"]
script = ExtResource("1_sfk0b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_140pd")

[node name="Pivot" type="Node3D" parent="CollisionShape3D"]

[node name="Character_Male_1" parent="CollisionShape3D/Pivot" instance=ExtResource("2_fns4k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="SpringArmPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("3_uybvm")

[node name="CameraRig" type="SpringArm3D" parent="SpringArmPivot"]
shape = SubResource("SphereShape3D_eka8w")
spring_length = 6.0

[node name="SpringPosition" type="Node3D" parent="SpringArmPivot/CameraRig"]

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot" node_paths=PackedStringArray("spring_arm")]
script = ExtResource("4_noa0o")
spring_arm = NodePath("../CameraRig/SpringPosition")
